# olx

./: docker-compose.yml  main.py  pyproject.toml  sql_app.db
app/: dependencies.py  errors.py  service.py
app/auth/models/: models.py  schemas.py
app/auth/models/repository/: repository.py
app/auth/routers/: __init__.py  router_authorize.py  router_profile.py  router_register.py
config/: settings.py
scripts/: launch.sh
